# smthrift

./: .gitignore  CMakeLists.txt  README.md  config.m4  php_smthrift.h  php_thrift_protocol.cpp  smthrift.c
thrift/: php_thrift_protocol7.cpp
